@startuml

title __ENTITIES's Class Diagram__\n

  namespace entities {
    abstract class entities.Entity {
        # gravMul : double
        # mass : double
        + Entity()
        {abstract} + findColliding()
        + getAccel()
        + getGravMul()
        + getMass()
        + getPos()
        + getVelo()
        + mirrorVeloComponent()
        {abstract} + performCollision()
        + setAccel()
        + setGravMul()
        + setMass()
        + setPos()
        + setVelo()
        + update()
    }
  }
  

  namespace entities {
    class entities.Marble {
        + Marble()
        + Marble()
        + Marble()
    }
  }
  

  namespace entities {
    class entities.Point {
        + Point()
        + findColliding()
        + performCollision()
    }
  }
  

  namespace entities {
    class entities.Rectangle {
        - normalRot : double
        + Rectangle()
        + findColliding()
        + getDimensions()
        + getNormal()
        + getNormalRot()
        + performCollision()
        + setDimensions()
        + setNormal()
        + setNormalRot()
    }
  }
  

  namespace entities {
    class entities.SimpleTrack {
        + SimpleTrack()
        + isColliding()
        + performCollision()
    }
  }
  

  namespace entities {
    class entities.Sphere {
        - diameter : double
        + Sphere()
        + findColliding()
        + getDiameter()
        + performCollision()
        + setDiameter()
    }
  }
  

  namespace entities {
    class entities.Track {
        # xIntervall : double[]
        # yIntervall : double[]
        + Track()
        + getFunc()
        + getXIntervall()
        + isColliding()
        + normalAt()
    }
  }
  

  entities.Entity o-- misc.Vec3d : accel
  entities.Entity o-- misc.Vec3d : pos
  entities.Entity o-- misc.Vec3d : velo
  entities.Marble -up-|> entities.Sphere
  entities.Point -up-|> entities.Entity
  entities.Rectangle -up-|> entities.Entity
  entities.Rectangle o-- misc.Vec3d : dimensions
  entities.Rectangle o-- misc.Vec3d : normal
  entities.SimpleTrack -up-|> entities.Track
  entities.Sphere -up-|> entities.Entity
  entities.Track o-- misc.Polynomial3d : trackFunc


right footer


endfooter

@enduml
